--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,108 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-
-    <!-- Fontawesome is our recomended library for icons -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css">
+    <title>Credit card</title>
+</head>
+<body class="container">
+    <div class="card text-center p-5">
+        <div class="card-header text-start text-black fw-bold fs-5 ">
+          Payment form example
+        </div>
+        <div class="card-body">
+            <div class="alert alert-message alert-danger text-start fw-bold p-2 mb-3" id="alert" role="alert">
+                Some fileds are missing or are invalid. Please check the form and try again.
+            </div>
+              <div class="row g-3 d-flex">
+                <div class="col-md-4 text-start">
+                  <label for="cardnumber" class="form-label text-start">Card #</label>
+                  <input type="text" class="form-control" id="cardnumber" placeholder="N° de tarjeta" required>
+                  <div id="error-message-card" class="error-message">Error</div><!-- Error message -->
+                </div>
+                <div class="col-md-4 text-start">
+                  <label for="cvc" class="form-label">CVC #</label>
+                  <input type="text" class="form-control" id="cvc" placeholder="cvc" required>
+                  <div id="error-message-cvc" class="error-message"></div><!-- Error message -->
+                </div>
+                <div class="col-md-4 text-start">
+                  <label for="amount" class="form-label">Amount</label>
+                  <div class="input-group">
+                    <span class="input-group-text" id="inputGroupPrepend2">$</span>
+                    <input type="text" class="form-control" id="amount" aria-describedby="inputGroupPrepend2" placeholder="1.234.567" required>
+                  </div>
+                  <div id="error-message-amount" class="error-message"></div><!-- Error message -->
+                </div>
+                <div class="col-md-6 text-start">
+                  <label for="validationDefault03" class="form-label">First name</label>
+                  <input type="text" class="form-control" id="firstName" required>
+                  <div id="error-message-fn" class="error-message"></div><!-- Error message -->
+                </div>
+                <div class="col-md-6 text-start">
+                    <label for="validationDefault03" class="form-label">Last namer</label>
+                    <input type="text" class="form-control" id="lastName" required>
+                    <div id="error-message-ln" class="error-message"></div><!-- Error message -->
+                </div>
+                <div class="col-md-6 text-start">
+                    <label for="validationDefault03" class="form-label">City</label>
+                    <input type="text" class="form-control" id="city" required>
+                    <div id="error-message-city" class="error-message"></div><!-- Error message -->
+                </div>
+                <div class="col-md-3 text-start">
+                  <label for="validationDefault04" class="form-label">State</label>
+                  <select class="form-select" id="state" required>
+                    <option selected disabled value=""></option>
+                    <option>Bogotá</option>
+                    <option>Cali</option>
+                    <option>Medellin</option>
+                  </select>
+                  <div id="error-message-state" class="error-message"></div><!-- Error message -->
+                </div>
+                <div class="col-md-3 text-start">
+                  <label for="validationDefault05" class="form-label">Postal code</label>
+                  <input type="text" class="form-control" id="postalCode" required>
+                  <div id="error-message-pc" class="error-message"></div><!-- Error message -->
+                </div>
+                <div class="row align-items-center justify-content-between">
+                  <div class="col-md-6 d-flex flex-column text-start w-auto">
+                      <label class="form-label fw-bold">We accept:</label>
+                      <div class="d-inline-flex  p-2 bg-secondary rounded-3 gap-2 w-auto">
+                          <div class="form-check m-0">
+                              <input class="form-check-input" type="radio" name="paymentMethod" id="diners">
+                              <i class="fa-brands fa-cc-diners-club text-white"></i>
+                          </div>
+                          <div class="form-check m-0">
+                              <input class="form-check-input" type="radio" name="paymentMethod" id="mastercard" checked>
+                              <i class="fa-brands fa-cc-mastercard text-white"></i>
+                          </div>
+                          <div class="form-check m-0">
+                              <input class="form-check-input" type="radio" name="paymentMethod" id="visa">
+                              <i class="fa-brands fa-cc-visa text-white"></i>
+                          </div>
+                          <div class="form-check m-0">
+                              <input class="form-check-input" type="radio" name="paymentMethod" id="credit-card">
+                              <i class="fa-solid fa-credit-card text-white"></i>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-md-6 text-start">
+                      <label for="message" class="form-label fw-bold">Message</label>
+                      <textarea class="form-control" id="message" rows="3"></textarea>
+                      <small class="text-muted">Add any notes here.</small>
+                      <div id="error-message" class="error-message"></div><!-- Error message -->
+                  </div>
+              </div>
+              </div>
+            <div class="card-footer text-body-secondary d-flex justify-content-end gap-2 rounded-bottom" style="background-color: rgb(230, 230, 230);">
+                <button class="btn btn-secondary" type="button">Cancel</button>
+                <button class="btn btn-primary" id="send" type="submit">Submit</button>
+            </style>
       </div>
-    </div>
-
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
-  </body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./app.js"></script>
+</body>
 </html>
